<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/relLay"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_wasdap4"
            android:contentDescription="@string/app_name"/>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/image"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_bg"
            android:hint="Please enter your email."
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:ems="10"
    />
    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_bg"
            android:hint="Please enter your password."
            android:gravity="center"
            android:inputType="textPassword"
            android:ems="10"
    />
    <Button
            android:id="@+id/login_with_email"
            android:backgroundTint="@color/colorAccent2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="Login"
            android:background="@drawable/round_bg"
            android:layout_below="@id/password"

    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginHorizontal="40dp"
                  android:layout_marginTop="450dp"
                  android:id="@+id/linLay"
                  android:weightSum="5"
                  android:layout_alignParentTop="true">

        <ImageButton

                android:id="@+id/login_with_facebook"
                android:layout_weight="1"
                android:backgroundTint="@color/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/round_bg"
                android:layout_below="@id/login_with_email"
                android:textColor="#FFFF"
                android:layout_gravity="left"
                android:src="@drawable/ic_facebook_login"
                android:drawableLeft="@drawable/ic_iconmonstr_facebook_5"

        />
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
        />

        <ImageButton
                android:id="@+id/login_with_twitter"
                android:layout_weight="1"
                android:backgroundTint="@color/twitter"
                android:layout_width="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/round_bg"
                android:layout_below="@id/login_with_facebook"
                android:textColor="#FFFF"
                android:src="@drawable/ic_twitter_login"
        />
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
        />
        <ImageButton
                android:id="@+id/login_with_google"
                android:backgroundTint="@color/google"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:paddingRight="5dp"
                android:background="@drawable/round_bg"
                android:layout_below="@id/login_with_twitter"
                android:textColor="#FFFF"
                android:src="@drawable/ic_google_logo"
                android:drawableLeft="@drawable/ic_google_logo"/>

    </LinearLayout>

    <Button
            android:visibility="visible"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="Sign Up"
            android:layout_below="@+id/linLay"
            android:background="@drawable/round_bg"
            android:textColor="#FFFF"/>
</RelativeLayout>