<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"
    />

    <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/ic_iconmonstr_menu_2"
            android:title="@string/title_list"
            android:checked="true"/>

    <item
            android:id="@+id/navigation_qr_code"
            android:icon="@drawable/ic_iconmonstr_qr_code_2"
            android:title="@string/title_qr_code"/>
    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_iconmonstr_user_6"
            android:title="@string/title_account"/>

</menu>

